# linguicator-predictor

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  tox.ini
linguicator_predictor/: __init__.py  service.py  websocket.py
linguicator_predictor/models/en/: distilgpt2.py
