[tool.poetry]
name = "linguicator-predictor"
version = "0.5.0"
description = "Text prediction service for Linguiçator"
authors = ["Machine Grooving Studio <machine.grooving@gmail.com>"]
maintainers = ["Machine Grooving Studio <machine.grooving@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "http://github.com/machinegrooving"
repository = "https://github.com/machinegrooving/linguicator-predictor"

[tool.poetry.scripts]
linguicator = "linguicator_predictor:main"

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.7.9"
torch = "^1.4.0"
transformers = "^2.5.1"
websockets = "^8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
